tests/integrations/snapshots/integrations__group_bad_dependency@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about invalid group dependencies.
---
Some(
    2,
)
