tests/integrations/snapshots/integrations__group_bad_dependency@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about invalid group dependencies.
---

