tests/integrations/snapshots/integrations__group_dependency_cycle_dot@stdout.snap
---
source: tests/integrations/main.rs
description: Should show the graphviz dot representation even though there are cycles.
---
digraph {
    0 [ label = "group start: a" ]
    1 [ label = "group end: a" ]
    0 -> 1 [ label = "1" ]
    1 -> 0 [ label = "1" ]
}
