tests/integrations/snapshots/integrations__groups_dependency_cycle@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about dependency cycles.
---

