tests/integrations/snapshots/integrations__groups_dependency_cycle_dot@stderr.snap
---
source: tests/integrations/main.rs
description: Should show the graphviz dot representation even though there are cycles.
---

