tests/integrations/snapshots/integrations__groups_dependency_cycle_dot@stdout.snap
---
source: tests/integrations/main.rs
description: Should show the graphviz dot representation even though there are cycles.
---
digraph {
    0 [ label = "group start: a" ]
    1 [ label = "group end: a" ]
    2 [ label = "group start: b" ]
    3 [ label = "group end: b" ]
    0 -> 1 [ label = "1" ]
    2 -> 3 [ label = "1" ]
    3 -> 0 [ label = "1" ]
    1 -> 2 [ label = "1" ]
}
