tests/integrations/snapshots/integrations__ignored_nonzero_task_exit_status@status_code.snap
---
source: tests/integrations/main.rs
description: Should still succeed because the nonzero exit status was ignored.
---
Some(
    0,
)
