tests/integrations/snapshots/integrations__ignored_nonzero_task_exit_status@stderr.snap
---
source: tests/integrations/main.rs
description: Should still succeed because the nonzero exit status was ignored.
---

